hr-config-server configurando com repositorio privado

--- a/hr-api-gatewat-zuul/src/main/resources/application.properties
+++ b/hr-api-gatewat-zuul/src/main/resources/application.properties
@@ -14,4 +14,7 @@ zuul.routes.worker.path=/hr-worker/**
 zuul.routes.payroll.service-id=hr-payroll
 zuul.routes.payroll.path=/hr-payroll/**
 
+zuul.routes.blockchain.service-id=hr-blockchain
+zuul.routes.blockchain.path=/hr-blockchain/**
+
 
