hr-user configurando repositorio, gateway e endpoints

--- a/hr-api-gatewat-zuul/src/main/resources/application.properties
+++ b/hr-api-gatewat-zuul/src/main/resources/application.properties
@@ -17,4 +17,7 @@ zuul.routes.payroll.path=/hr-payroll/**
 zuul.routes.blockchain.service-id=hr-blockchain
 zuul.routes.blockchain.path=/hr-blockchain/**
 
+zuul.routes.user.service-id=hr-user
+zuul.routes.user.path=/hr-user/**
+
 
