--- a/hr-api-gatewat-zuul/src/main/resources/application.properties
+++ b/hr-api-gatewat-zuul/src/main/resources/application.properties
@@ -20,4 +20,7 @@ zuul.routes.blockchain.path=/hr-blockchain/**
 zuul.routes.user.service-id=hr-user
 zuul.routes.user.path=/hr-user/**
 
+zuul.routes.oauth.service-id=hr-oauth
+zuul.routes.oauth.path=/hr-oauth/**
+
 
