--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=hr-api-gateway-zuul
 server.port=8765
 
-eureka.client.service-url.defaulZone=http:localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-#Configuração de timeout
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.ConnectTimeout=10000
 ribbon.ReadTimeout=20000
@@ -14,15 +13,9 @@ zuul.routes.worker.path=/hr-worker/**
 zuul.routes.payroll.service-id=hr-payroll
 zuul.routes.payroll.path=/hr-payroll/**
 
-zuul.routes.blockchain.service-id=hr-blockchain
-zuul.routes.blockchain.path=/hr-blockchain/**
-
 zuul.routes.user.service-id=hr-user
 zuul.routes.user.path=/hr-user/**
 
 zuul.routes.oauth.service-id=hr-oauth
 zuul.routes.oauth.path=/hr-oauth/**
-
 zuul.routes.oauth.sensitive-headers=Cookie,Set-Cookie
-
-
