--- a/hr-eureka-server/pom.xml
+++ b/hr-eureka-server/pom.xml
@@ -15,7 +15,7 @@
 	<description>Eureka server</description>
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>2020.0.5</spring-cloud.version>
+		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
