--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=${PORT:0}
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-eureka.client.service-url.defaulZone=http:localhost:8761/eureka
+eureka.client.service-url.defaulZone=http://hr-eureka-server:8761/eureka
 
 #Configuração de timeout
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
